--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
-:root {--color-primary: #6f6af8;
-    --color-primary-light: #6d68f82e;
-    --color-primary-variant: #5854c7;
-    --color-red: #b20000;
-    --color-less-red: #e50000df;
+:root {--color-primary: #303030;
+    --color-primary-light: #858282;
+    --color-primary-variant: #9d9393;
+    --color-red: #ff0266;
+    --color-less-red: #cf6679;
     --color-red-light: #db0f3f26;
     --color-green: #00c476;
     --color-green-light: #00c27426;
-    --color-gray-900: #1e1e66;
-    --color-gray-700: #2d2b7c;
+    --color-gray-900: #212121;
+    --color-gray-700: #403f3f;
     --color-gray-300: #f2f2fe4d;
     --color-gray-200: #f2f2feb3;
     --color-white: #f2f2fe;
-    --color-bg: #0f0f3e;
+    --color-bg: #121212;
     --color-black: #000000;
 
     --transition: all 300ms ease;
@@ -193,7 +193,7 @@ nav button {
 
 .category__button {
     background: var(--color-primary-light);
-    color: var(--color-primary);
+    color: var(--color-black);
     display: inline-block;
     padding: 0.5rem 1rem;
     border-radius: var(--border-radius-2);
